updated oidc/oauth endpoints
